overflow fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
   font-family: Ramona, "Open Sans", sans-serif;
   color: #34333D;
 }
-body{
+html, body{
   overflow: hidden;
 }
 a{
